--- a/esite/index.html
+++ b/esite/index.html
@@ -7,12 +7,13 @@
     <title>ANTEQS Ecommerce site</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="aos.css">
-<script src="aos.js"></script>    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+<script src="aos.js"></script>   
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
      <script src="script/jquery.js"></script>
    
-    <link rel="stylesheet" href="fontawesome/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
-<body style="position:relative" onload="getLocation()" >
+<body style="position:relative">
 
   <!-- Start: Preloader-->
 
@@ -374,36 +375,6 @@
 
 <script>
   
-  
-  function getLocation() {
-    if (navigator.geolocation) {
-      navigator.geolocation.watchPosition(showPosition, showError);
-    } else { 
-   console.log("Geolocation is not supported by this browser.");
-    }
-  }
-  
-  function showPosition(position) {
-    console.log("Latitude: " + position.coords.latitude + 
-    "Longitude: " + position.coords.longitude);
-  }
-  
-  function showError(error) {
-    switch(error.code) {
-      case error.PERMISSION_DENIED:
- console.log("User denied the request for Geolocation.");
-        break;
-      case error.POSITION_UNAVAILABLE:
-  console.log("Location information is unavailable.")
-        break;
-      case error.TIMEOUT:
-   console.log("The request to get user location timed out.")
-        break;
-      case error.UNKNOWN_ERROR:
-   console.log("An unknown error occurred.");
-        break;
-    }
-  }
   AOS.init();
   </script>
   
